[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Caisse.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Caisses/00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Caisses/01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Caisses/02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Caisses/03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Caisses/04.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Caisses/05.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Caisses/06.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Caisses/07.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Caisses/08.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 28.2042, 27.6329 )

[node name="RigidBody2D" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 25.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 2
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )

[node name="SpriteBREAK" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]

[connection signal="animation_finished" from="SpriteBREAK" to="." method="_on_SpriteBREAK_animation_finished"]


